# statistical_outlier_removal_filter

./: CMakeLists.txt  package.xml
src/: sor_filter.cpp  sor_filter_client.cpp  sor_filter_server.cpp
